# c-sharp-refactor-mcp

./: .gitignore  .repomixignore  .structurelint-quickref.md  .structurelint.yml  COMPLETE_PROJECT_REPORT_ALL_PHASES.md  CONTRIBUTING.md  FINAL_PROJECT_SUMMARY.md  LICENSE  PHASE_COMPARISON_ANALYSIS.md  Program.cs  README.md  REUSABLE_ARCHITECTURE_PATTERNS.md  RoslynRefactorServer.csproj  RoslynRefactorServer.sln  SIMILAR_PROJECTS_COMPARISON.md  WORKFLOW-STATUS.md  appsettings.json  build-test.log.example  check-workflow.sh  repomix.config.json  sonar-project.properties
Abstractions/: ILanguageProvider.cs  ProviderResult.cs
Models/: DiagnosticInfo.cs  LanguageModels.cs  ReferenceLocation.cs
Providers/: BaseLspLanguageProvider.cs  CSharpLanguageProvider.cs  CppLanguageProvider.cs  GoLanguageProvider.cs  JavaLanguageProvider.cs  PythonLanguageProvider.cs  RustLanguageProvider.cs  TypeScriptLanguageProvider.cs  VBNetLanguageProvider.cs
RoslynRefactorServer.Tests/: RoslynRefactorServer.Tests.csproj
Services/: LanguageDetectorService.cs  LspClient.cs  PathSecurityService.cs  RoslynWorkspaceService.cs
Tools/: AdvancedRefactoringTools.cs  RefactoringTools.cs  UnifiedRefactoringTools.cs
docs/: ARCHITECTURE.md  CI-WORKFLOW-GUIDE.md  CI-WORKFLOW.md  IMPROVEMENT-RECOMMENDATIONS.md  INSTALLATION.md  MCP-LANGUAGE-ECOSYSTEM-ANALYSIS.md  MULTI-LANGUAGE-ARCHITECTURE-DECISION.md  MULTI-LANGUAGE-ARCHITECTURE.md  PERFORMANCE-OPTIMIZATIONS.md  PROJECT-COMPLETION-REPORT.md  SIMILAR-PROJECTS-RESEARCH.md  STRUCTURELINT.md  structurelint-quickref.md
python/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  MIGRATION.md  Makefile  PHASE_2_COMPLETE.md  PHASE_3_GO_COMPLETE.md  PYTHON-REWRITE-GUIDE.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  pytest.ini
python/.github/workflows/: ci.yml
python/docs/: LSP_IMPLEMENTATION_RESEARCH.md  NATIVE_REFACTORING_ALTERNATIVES.md
python/go_dst_cli/: build.bat  build.sh  go.mod  main.go
python/roslyn_cli/: .gitignore  Program.cs  README.md  RoslynCLI.csproj  build.bat  build.sh  test.sh
python/src/refactor_mcp/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py
python/src/refactor_mcp/clients/: __init__.py  go_dst_client.py  lsp.py  lsp_pool.py  rope_client.py  roslyn.py  ts_morph.py
python/src/refactor_mcp/models/: __init__.py  refactoring.py
python/src/refactor_mcp/tools/: __init__.py  analysis.py  diagnostics.py  refactoring.py
python/src/refactor_mcp/utils/: __init__.py  cache.py  security.py
python/tests/: __init__.py  test_cache.py  test_config.py  test_go_dst_client.py  test_refactoring.py  test_rope_client.py  test_security.py  test_ts_morph.py
python/ts_morph_cli/: README.md  build.bat  build.sh  package.json  test.sh
python/ts_morph_cli/src/: index.ts
(+15 files in other folders)
